# global-chat

./: .gitignore  Cargo.toml  Dockerfile  README.md  main.db  sqlx-data.json
.github/workflows/: build.yml  static.yml
docs/: package.json  pnpm-lock.yaml  vite.config.ts
docs/src/: App.tsx
migrations/: 20230530104234_channels.sql
src/: main.rs
